# medpack

./: Cargo.toml  Dockerfile  README.md  notes.md
.github/workflows/: build.yml
src/: app.rs  categorizer.rs  command.rs  main.rs  pdf_tools.rs  structs.rs  toc.rs
src/assets/: index.ts
