[package]
name = "medpack"
version = "0.1.0"
edition = "2021"


[dependencies]
chrono = { version = "0.4.33", features = ["serde"] }
eyre = "0.6.12"
itertools = "0.12.1"
lazy_static = "1.4.0"
regex = "1.10.3"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
serde_yaml = "0.9.31"
tempdir = "0.3.7"
