[package]
name = "medpack"
version = "0.1.0"
edition = "2021"


[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.48", features = ["derive"] }
console = "0.16.1"
eyre = "0.6.12"
indicatif = "0.18.0"
itertools = "0.13.0"
lazy_static = "1.5.0"
rayon = "1.10.0"
regex = "1.10.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
serde_yaml = "0.9.34"
tempdir = "0.3.7"
